<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".tasks.TaskEditorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/screen_margin">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="@dimen/content_max_width">

            <TextView
                android:id="@+id/editorTitle"
                style="@style/Widget.Zen.SectionHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                tools:text="@string/new_task" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/taskNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/task_name"
                    android:inputType="textCapSentences"
                    android:minHeight="@dimen/button_height" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/taskDescriptionInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:hint="@string/task_description"
                    android:inputType="textCapSentences|textMultiLine"
                    android:minLines="3" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/categoryLabel"
                style="@style/Widget.Zen.SliderLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/category" />

            <!-- One chip per category, added by TaskEditorFragment -->
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/categoryChips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:selectionRequired="true"
                app:singleSelection="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/dueDateButton"
                    style="@style/Widget.Material3.Button.TextButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|start"
                    android:minHeight="@dimen/touch_target"
                    android:textColor="@color/dark_green"
                    android:textSize="@dimen/text_body_large"
                    app:icon="@drawable/ic_event"
                    app:iconTint="@color/dark_green"
                    tools:text="@string/add_due_date" />

                <Button
                    android:id="@+id/clearDueDateButton"
                    style="@style/Widget.Zen.NavIconButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/remove_due_date"
                    android:visibility="gone"
                    app:icon="@drawable/ic_close"
                    tools:visibility="visible" />
            </LinearLayout>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/reminderSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remind_me" />

            <Button
                android:id="@+id/reminderTimeButton"
                style="@style/Widget.Material3.Button.TextButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|start"
                android:minHeight="@dimen/touch_target"
                android:textColor="@color/dark_green"
                android:textSize="@dimen/text_body_large"
                android:visibility="gone"
                app:icon="@drawable/ic_alarm"
                app:iconTint="@color/dark_green"
                tools:text="Remind me at 09:00"
                tools:visibility="visible" />

            <Button
                android:id="@+id/addTaskButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/add_task" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
