<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tasks.TasksFragment">

    <TextView
        android:id="@+id/tasksTitle"
        style="@style/Widget.Zen.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/screen_margin"
        android:layout_marginTop="@dimen/title_margin_top"
        android:gravity="center_horizontal"
        android:text="@string/my_tasks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasksRecyclerView"
        android:contentDescription="@string/task_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_medium"
        android:clipToPadding="false"
        android:paddingHorizontal="@dimen/screen_margin"
        android:paddingBottom="@dimen/spacing_medium"
        app:layout_constraintBottom_toTopOf="@id/addNewTaskButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tasksTitle"
        app:layout_constraintWidth_max="@dimen/content_max_width" />

    <TextView
        android:id="@+id/emptyText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/screen_margin"
        android:gravity="center"
        android:text="@string/no_tasks_yet"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/text_body_large"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/tasksRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tasksRecyclerView"
        tools:visibility="visible" />

    <Button
        android:id="@+id/addNewTaskButton"
        style="@style/Widget.Zen.Button.Tonal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/screen_margin"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:text="@string/add_new_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="@dimen/content_max_width" />
</androidx.constraintlayout.widget.ConstraintLayout>
